@@ -69,19 +69,6 @@ class TestGemCommandsUninstallCommand < Gem::InstallerTestCase
     Gem::Installer.exec_format = nil
   end
 
-  def test_execute_not_installed
-    @cmd.options[:args] = ["foo"]
-    e = assert_raises Gem::InstallError do
-      use_ui @ui do
-        @cmd.execute
-      end
-    end
-
-    assert_match(/\Acannot uninstall, check `gem list -d foo`$/, e.message)
-    output = @ui.output.split "\n"
-    assert_empty output, "UI output should be empty after an uninstall error"
-  end
-
   def test_execute_prerelease
     @spec = quick_spec "pre", "2.b"
     @gem = File.join @tempdir, @spec.file_name
